--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+/target
 
 # Package Files #
 *.jar
@@ -24,10 +25,9 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
-/NewYikids.iml
 /.idea
 /src/test/java/com/yikids/pages/HomePage.java
 /pom.xml
-/com.yikids.iml
+
 
 # Created by .ignore support plugin (hsz.mobi)
