--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.gitignore
 ### Java template
 *.class
 
@@ -14,6 +15,10 @@
 hs_err_pid*
 /com.yikids.iml
 /NewYikids.iml
+/.idea
+/src/test/java/com/yikids/pages/HomePage.java
+/pom.xml
+
 ### Maven template
 target/
 pom.xml.tag
@@ -24,10 +29,8 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+/src/test/java/com/yikids/util/SignUpTestIrina.java
 
-/.idea
-/src/test/java/com/yikids/pages/HomePage.java
-/pom.xml
 
 
 # Created by .ignore support plugin (hsz.mobi)
