--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ hs_err_pid*
 /com.yikids.iml
 /NewYikids.iml
 ### Maven template
+/debug.log
+/.gitignore
 target/
 pom.xml.tag
 pom.xml.releaseBackup
