--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
   <artifactId>com.yikids</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <dependencies>
     <dependency>
       <groupId>org.testng</groupId>
@@ -23,14 +22,9 @@
       <version>0.2</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-    </dependency>
-    <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>2.40.0</version>
+      <version>2.53.0</version>
     </dependency>
     <dependency>
       <groupId>com.opera</groupId>
@@ -55,7 +49,12 @@
     <dependency>
       <groupId>ru.stqa.selenium</groupId>
       <artifactId>webdriver-factory</artifactId>
-      <version>1.0</version>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-exec</artifactId>
+      <version>1.3</version>
     </dependency>
   </dependencies>
   <build>
