--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ hs_err_pid*
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
+/src/test/java/com/yikids/pages/TestPage.java
 pom.xml.next
 release.properties
 dependency-reduced-pom.xml
