--- a/pom.xml
+++ b/pom.xml
@@ -76,12 +76,6 @@
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-ie-driver</artifactId>
-      <version>2.53.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-support</artifactId>
       <version>2.53.0</version>
       <scope>test</scope>
@@ -204,7 +198,7 @@
       <id>recruter</id>
       <properties>
         <env>local</env>
-        <site.url>http://physician.yikids.com/</site.url>
+        <site.url>http://physician.yikids.com</site.url>
       </properties>
       <activation>
         <activeByDefault>true</activeByDefault>
