--- a/pom.xml
+++ b/pom.xml
@@ -7,29 +7,9 @@
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
-      <groupId>com.github.detro.ghostdriver</groupId>
-      <artifactId>phantomjsdriver</artifactId>
-      <version>1.1.0</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>selenium-remote-driver</artifactId>
-          <groupId>org.seleniumhq.selenium</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>selenium-server</artifactId>
-          <groupId>org.seleniumhq.selenium</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>com.github.yev</groupId>
-      <artifactId>screenshot</artifactId>
-      <version>0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.opera</groupId>
-      <artifactId>operadriver</artifactId>
-      <version>1.5</version>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.9.10</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -54,7 +34,12 @@
     <dependency>
       <groupId>ru.stqa.selenium</groupId>
       <artifactId>webdriver-factory</artifactId>
-      <version>2.0</version>
+      <version>1.1.52</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-exec</artifactId>
+      <version>1.3</version>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
@@ -137,7 +122,9 @@
     <profile>
       <id>firefox</id>
       <properties>
-        <capabilities>/firefox.capabilities</capabilities>
+        <browser.name>firefox</browser.name>
+        <browser.version></browser.version>
+        <browser.platform></browser.platform>
       </properties>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -146,42 +133,54 @@
     <profile>
       <id>chrome</id>
       <properties>
-        <capabilities>/chrome.capabilities</capabilities>
+        <browser.name>chrome</browser.name>
+        <browser.version></browser.version>
+        <browser.platform></browser.platform>
       </properties>
     </profile>
     <profile>
       <id>ie</id>
       <properties>
-        <capabilities>/ie.capabilities</capabilities>
+        <browser.name>internet explorer</browser.name>
+        <browser.version></browser.version>
+        <browser.platform></browser.platform>
       </properties>
     </profile>
     <profile>
       <id>safari</id>
       <properties>
-        <capabilities>/safari.capabilities</capabilities>
+        <browser.name>safari</browser.name>
+        <browser.version></browser.version>
+        <browser.platform></browser.platform>
       </properties>
     </profile>
     <profile>
       <id>phantomjs</id>
       <properties>
-        <capabilities>/phantomjs.capabilities</capabilities>
+        <browser.name>phantomjs</browser.name>
+        <browser.version></browser.version>
+        <browser.platform></browser.platform>
       </properties>
     </profile>
     <profile>
       <id>opera</id>
       <properties>
-        <capabilities>/opera.capabilities</capabilities>
+        <browser.name>opera</browser.name>
+        <browser.version></browser.version>
+        <browser.platform></browser.platform>
       </properties>
     </profile>
     <profile>
       <id>htmlunit</id>
       <properties>
-        <capabilities>/htmlunit.capabilities</capabilities>
+        <browser.name>htmlunit</browser.name>
+        <browser.version></browser.version>
+        <browser.platform></browser.platform>
       </properties>
     </profile>
     <!-- environments -->
     <profile>
-      <id>localhost</id>
+      <id>recruter</id>
       <properties>
         <site.url>http://physician.yikids.com</site.url>
       </properties>
